# NetWatch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: config.toml  netwatch.desktop  netwatch.metainfo.xml
assets/systemd/: netwatchd-system.service  netwatchd.service
crates/netwatch-cli/: Cargo.toml
crates/netwatch-cli/debian/: postinst  postrm  prerm
crates/netwatch-cli/src/: main.rs
crates/netwatch-collector/: Cargo.toml
crates/netwatch-collector/src/: lib.rs  proc_net.rs  sysfs.rs
crates/netwatch-core/: Cargo.toml
crates/netwatch-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/netwatch-daemon/: Cargo.toml
crates/netwatch-daemon/src/: main.rs
crates/netwatch-db/: Cargo.toml
crates/netwatch-db/src/: aggregation.rs  lib.rs  models.rs  pool.rs  queries.rs  retention.rs
crates/netwatch-db/src/migrations/: 001_init.sql
crates/netwatch-export/: Cargo.toml
crates/netwatch-export/src/: lib.rs
crates/netwatch-stats/: Cargo.toml
crates/netwatch-stats/src/: lib.rs
crates/netwatch-tui/: Cargo.toml
crates/netwatch-tui/src/: app.rs  lib.rs  pages.rs  theme.rs  widgets.rs
man/: netwatch.1  netwatchd.1
packaging/arch/: PKGBUILD
