[workspace]
resolver = "2"
members = [
    "crates/netwatch-core",
    "crates/netwatch-collector",
    "crates/netwatch-stats",
    "crates/netwatch-db",
    "crates/netwatch-export",
    "crates/netwatch-tui",
    "crates/netwatch-daemon",
    "crates/netwatch-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NetWatch Contributors"]
repository = "https://github.com/netwatch/netwatch"
description = "Lightweight Linux network usage monitor with TUI"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
glob = "0.3"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

netwatch-core = { path = "crates/netwatch-core" }
netwatch-collector = { path = "crates/netwatch-collector" }
netwatch-stats = { path = "crates/netwatch-stats" }
netwatch-db = { path = "crates/netwatch-db" }
netwatch-export = { path = "crates/netwatch-export" }
netwatch-tui = { path = "crates/netwatch-tui" }

[profile.release]
lto = true
codegen-units = 1
strip = true
