[package]
name = "netwatch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and configuration for NetWatch"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
glob.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
