[package]
name = "netwatch-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background network statistics daemon for NetWatch"

[[bin]]
name = "netwatchd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
netwatch-collector.workspace = true
netwatch-core.workspace = true
netwatch-db.workspace = true
netwatch-stats.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
