[package]
name = "netwatch-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite storage layer for NetWatch"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
netwatch-core.workspace = true
netwatch-stats.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
