[package]
name = "netwatch-export"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Export formats for NetWatch statistics"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
netwatch-core.workspace = true
netwatch-db.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
netwatch-stats.workspace = true
