[package]
name = "netwatch-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for NetWatch"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
netwatch-core.workspace = true
netwatch-db.workspace = true
netwatch-stats.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ratatui = { workspace = true, features = ["all-widgets"] }
